Closed Bug 701562 Opened 14 years ago Closed 13 years ago

HTTPS DNS Sticks When Switching Proxies

Categories

(Core :: Networking: HTTP, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: mikeytag, Assigned: mcmanus)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_7_2) AppleWebKit/535.2 (KHTML, like Gecko) Chrome/15.0.874.106 Safari/535.2 Steps to reproduce: This might be related to bug 449412, but I am not sure. I am a web developer and have several proxies. 1 for Local Dev, 1 for Remote Dev, 1 for Staging, etc. Using proxies is nice because it allows me to test and develop using the actual domain names that will be involved in production. Everything works perfectly for HTTP (port 80). Switching through the proxies always updates the DNS correctly and sends me to the right server. The problem is when I am proxying over HTTPS. The ip that the first proxy resolves for an HTTPS address is the ip that hostname will ALWAYS resolve to (over HTTPS) if you choose another proxy. Oddly enough, if I switch to "No Proxy" the HTTPS request will resolve to the new ip just fine. However, if I go back to any other proxy before or after using a direct connection Firefox just always remembers the first ip given for an HTTPS hostname when a proxy is used. I know this is more of an edge case situation and a low priority bug. FWIW, if I do the same thing with Chrome and proxy switching, everything works as expected. However, I love Firefox for web development and would love to see this bug fixed in a new release! Actual results: Working on https://www.foo.com with Proxy 1 ip resolves to 1.2.3.4 Switch to Proxy 2 and ip still resolves to 1.2.3.4 Expected results: The ip should update to the new proxy's DNS for HTTPS requests, but it doesn't. It works great for HTTP though!
Assignee: nobody → mcmanus
Depends on: 652928
Assignee: mcmanus → nobody
Component: General → Networking: HTTP
Product: Firefox → Core
Version: 8 Branch → Trunk
Attached patch patch 0Splinter Review
this is a close cousin of 652928 (and patched on top of it)
Assignee: nobody → mcmanus
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #658189 - Flags: review?(jduell.mcbugs)
Comment on attachment 658189 [details] [diff] [review] patch 0 Review of attachment 658189 [details] [diff] [review]: ----------------------------------------------------------------- looks good.
Attachment #658189 - Flags: review?(jduell.mcbugs) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: