bug 701562 ssl proxy not part of connection info hash r=duell